--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Smart Counter Buttons Project</title>
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <title>UserFinder</title>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div class="min-w-screen min-h-screen flex flex-col" id="root"></div>
